// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LikeC4ModelBuilder > builds model 1`] = `
{
  "elements": {
    "client": {
      "id": "client",
      "kind": "user",
      "shape": "person",
      "title": "client",
    },
    "system": {
      "id": "system",
      "kind": "component",
      "title": "system",
    },
    "system.backend": {
      "color": "secondary",
      "id": "system.backend",
      "kind": "component",
      "title": "Backend",
    },
    "system.frontend": {
      "color": "muted",
      "id": "system.frontend",
      "kind": "component",
      "shape": "browser",
      "tags": [
        "deprecated",
      ],
      "title": "frontend",
    },
  },
  "relations": {
    "46b9e42890c694d2bba5a0d1ca68e0db22edbe56": {
      "id": "46b9e42890c694d2bba5a0d1ca68e0db22edbe56",
      "source": "client",
      "target": "system.frontend",
      "title": "",
    },
    "b11f56fbd6b4b02deb138bf959e35c0dfe061ecd": {
      "id": "b11f56fbd6b4b02deb138bf959e35c0dfe061ecd",
      "source": "system.frontend",
      "target": "system.backend",
      "title": "requests",
    },
  },
  "views": {},
}
`;

exports[`LikeC4ModelBuilder > builds model with extend 1`] = `
{
  "elements": {
    "client": {
      "id": "client",
      "kind": "user",
      "title": "client",
    },
    "system": {
      "id": "system",
      "kind": "component",
      "title": "system",
    },
    "system.backend": {
      "id": "system.backend",
      "kind": "component",
      "title": "backend",
    },
    "system.backend.api": {
      "id": "system.backend.api",
      "kind": "component",
      "title": "api",
    },
    "system.frontend": {
      "id": "system.frontend",
      "kind": "component",
      "title": "frontend",
    },
  },
  "relations": {
    "1ac9195843081750e2aabdb657a4727c1a9c18f3": {
      "id": "1ac9195843081750e2aabdb657a4727c1a9c18f3",
      "source": "system.frontend",
      "target": "system.backend.api",
      "title": "requests",
    },
    "243ec225564cf9a9bdc936707f989434385fc862": {
      "id": "243ec225564cf9a9bdc936707f989434385fc862",
      "source": "client",
      "target": "system.frontend",
      "title": "",
    },
  },
  "views": {
    "84c657e83cc88042b500b62d70653cb078d06e43": {
      "edges": [
        {
          "id": "system.frontend:system.backend",
          "label": "requests",
          "relations": [
            "1ac9195843081750e2aabdb657a4727c1a9c18f3",
          ],
          "source": "system.frontend",
          "target": "system.backend",
        },
        {
          "id": "client:system.frontend",
          "label": null,
          "relations": [
            "243ec225564cf9a9bdc936707f989434385fc862",
          ],
          "source": "client",
          "target": "system.frontend",
        },
      ],
      "id": "84c657e83cc88042b500b62d70653cb078d06e43",
      "nodes": [
        {
          "children": [],
          "id": "client",
          "parent": null,
          "title": "client",
        },
        {
          "children": [],
          "id": "system.backend",
          "parent": null,
          "title": "backend",
        },
        {
          "children": [],
          "id": "system.frontend",
          "parent": null,
          "title": "frontend",
        },
      ],
      "rules": [
        {
          "exprs": [
            {
              "wildcard": true,
            },
          ],
          "isInclude": true,
        },
      ],
      "viewOf": "system.frontend",
    },
    "index": {
      "edges": [
        {
          "id": "client:system",
          "label": null,
          "relations": [
            "243ec225564cf9a9bdc936707f989434385fc862",
          ],
          "source": "client",
          "target": "system",
        },
      ],
      "id": "index",
      "nodes": [
        {
          "children": [],
          "id": "client",
          "parent": null,
          "title": "client",
        },
        {
          "children": [],
          "id": "system",
          "parent": null,
          "title": "system",
        },
      ],
      "rules": [
        {
          "exprs": [
            {
              "wildcard": true,
            },
          ],
          "isInclude": true,
        },
      ],
      "title": "Index",
    },
    "v1": {
      "edges": [
        {
          "id": "system.frontend:system.backend.api",
          "label": "requests",
          "relations": [
            "1ac9195843081750e2aabdb657a4727c1a9c18f3",
          ],
          "source": "system.frontend",
          "target": "system.backend.api",
        },
      ],
      "id": "v1",
      "nodes": [
        {
          "children": [],
          "id": "system.frontend",
          "parent": null,
          "title": "frontend",
        },
        {
          "children": [],
          "id": "system.backend.api",
          "parent": null,
          "title": "api",
        },
      ],
      "rules": [
        {
          "exprs": [
            {
              "wildcard": true,
            },
          ],
          "isInclude": true,
        },
      ],
      "viewOf": "system.backend.api",
    },
  },
}
`;
